syntax = "proto3";

package authSession;

service AuthService {
  rpc LoginByEmail (LoginByEmailRequest) returns (LoginResponse);
  rpc LoginByUsername (LoginByUsernameRequest) returns (LoginResponse);
  rpc RegisterCredential (RegisterCredentialRequest) returns (RegisterCredentialResponse);
}

message LoginByEmailRequest {
  string email = 1;
  string password = 2;
}

message LoginByUsernameRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string message = 2;
}

message RegisterCredentialRequest {
  string userId = 1;
  string password = 2; 
}

message RegisterCredentialResponse {
  string message = 1;
  bool success = 2;
  string passwordHash = 3;
}
