syntax = "proto3";

package identity;


service IdentityService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest {
    string email = 1;
    string username = 2;
    string password = 3;
}
message RegisterResponse {
    string message = 1;
}